--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "annes_quiz_main",
+  "name": "vite-react-typescript-starter",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "vercel-build": "npm run build"
+    "vercel-build": "npm run build",
+    "postinstall": "npm dedupe",
+    "preinstall": "npx only-allow npm"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -34,8 +36,8 @@
     "jspdf": "^2.5.2",
     "lucide-react": "^0.344.0",
     "next-themes": "^0.4.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.8.1",
@@ -66,7 +68,12 @@
     "vite": "^5.4.2"
   },
   "overrides": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
-  }
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "packageManager": "npm@10"
 }
